# blawgd-solana

./: .gitignore  Cargo.toml  README.md
blawgd-solana-sc/: Cargo.toml
blawgd-solana-sc/src/: lib.rs
blawgd-solana-sc/src/instructions/: mod.rs
blawgd-solana-sc/src/instructions/create_post/: execute.rs  mod.rs  validate.rs
blawgd-solana-sc/src/instructions/instantiate/: mod.rs  validate.rs
blawgd-solana-sc/src/instructions/like_post/: execute.rs  mod.rs
blawgd-solana-sc/src/state/: account.rs  mod.rs  post.rs
blawgd-solana-sc/tests/: basic_functionality.rs
blawgd-solana-sc/tests/helper/: mod.rs
frontend/: Cargo.toml
frontend/dst/: index.html
frontend/dst/assets/: app.js  style.css
frontend/dst/template/: account.html  edit.html  followings.html  index1.html  login.html  post.html
frontend/src/: context.rs  dom.rs  host.rs  lib.rs  logger.rs  storage.rs  task.rs  version.rs
frontend/src/clients/: cosmos_client.rs  mod.rs  rpc_client.rs
frontend/src/clients/blawgd_client/: blawgd.rs  mod.rs
frontend/src/clients/light_client/: clock.rs  custom_evidence_reporter.rs  light_client_io.rs  light_store.rs  mod.rs
frontend/src/clients/verification_client/: helpers.rs  keys.rs  mod.rs  proof.rs  verification_client.rs
frontend/src/components/: account_info.rs  edit_profile_page.rs  faucet_page.rs  followings_page.rs  home_page.rs  login_page.rs  mod.rs  nav_bar.rs  post.rs  post_creator.rs  post_page.rs  profile_page.rs  scroll_event.rs  send_page.rs  timeline_page.rs
frontend/src/pages/: edit_profile_page.rs  faucet_page.rs  followings_page.rs  home_page.rs  login_page.rs  mod.rs  post_page.rs  profile_page.rs  send_page.rs  timeline_page.rs
src/: entrypoint.rs  lib.rs  state.rs  util.rs
src/instructions/: mod.rs
src/instructions/create_post/: execute.rs  mod.rs
src/instructions/instantiate/: execute.rs  mod.rs  validate.rs
src/instructions/like_post/: execute.rs  mod.rs  validate.rs
src/instructions/update_following_list/: mod.rs  validate.rs
src/instructions/update_profile/: execute.rs  mod.rs
src/state/: account.rs  mod.rs  post.rs  program_state.rs
tests/: basic.rs  basic_functionality.rs
tests/helper/: mod.rs
(+2 files in other folders)
